modify navigation menu

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,12 +28,14 @@
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Teaching</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">Publication</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">Project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
 
   <div class="sidebar-item">
+  <!--
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
+  -->
 </div>
