--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.title == "About" %} active{% endif %}" href="/">Home</a>
+    <a class="sidebar-nav-item{% if page.title == "About" %} active{% endif %}" href="/">About</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
