update teaching page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Teaching</a>
+    <a class="sidebar-nav-item{% if page.title == "Teaching" %} active{% endif %}" href="/">Teaching</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">Publication</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">Project</a>
     <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
