--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,10 +9,8 @@
   </div>
 
   <nav class="sidebar-nav">
-  	<!--
-    <a class="sidebar-nav-item{% if page.title == "About" %} active{% endif %}" href="/">About</a>
-	<a class="sidebar-nav-item{% if page.title == "Teaching" %} active{% endif %}" href="/">Teaching</a>
-	-->
+
+    <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home</a>
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
       `layout: page` in the front-matter. See readme for usage.
