--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,8 @@
       {% endif %}
     {% endfor %}
     
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">Publication</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">Project</a>
+     <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">Publication</a> -->
+     <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">Project</a> -->
     <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
 
